--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link href="/bootstrap/bootstrap.css" rel="stylesheet">
-<link href="/bootstrap/bootstrap-responsive.css" rel="stylesheet">
-<link href="/css/main.css" rel="stylesheet">
-<link href="/css/cover.css" rel="stylesheet">
+<link href="bootstrap/bootstrap.css" rel="stylesheet">
+<link href="bootstrap/bootstrap-responsive.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
+<link href="css/cover.css" rel="stylesheet">
 </head>
 
 <body>
