--- a/Author.html
+++ b/Author.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link href="/bootstrap/bootstrap.css" rel="stylesheet">
-<link href="/bootstrap/bootstrap-responsive.css" rel="stylesheet">
-<link href="/css/main.css" rel="stylesheet">
+<link href="bootstrap/bootstrap.css" rel="stylesheet">
+<link href="bootstrap/bootstrap-responsive.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 <style type="text/css">
   body {
     padding-top: 60px;
