--- a/Note.html
+++ b/Note.html
@@ -111,7 +111,75 @@
     展開慢：嫩葉，加工技術良好，茶湯味道濃郁且耐沖、耐泡。
 </pre>
 <!--挑茶-->
+
+<!--國維改的-->
+<h2 class="note">§  台灣茶製茶過程</h2>
+<!--台灣茶製茶過程-->
+<pre class="content">
+  <b>「採茶」</b>
+      
+    採收方式分為人工與機器兩種。
+    茶葉葉面的完整與否攸關茶葉製造的品質，採茶過程中不能損傷茶葉，否則將降低茶葉品質
+
+
+  <b>「萎凋」</b>
+    
+    採茶後的茶菁收集放在竹編的笳藶上，經過陽光曝曬的「日光萎凋」，或藉由機器進行熱風萎凋，使茶菁的細胞內水分蒸發，隨著氧化的化學變化而發酵。
+
+  <b>「發酵」</b>
+
+    茶葉內細胞消失部分水分後，所含成分與空氣接觸而氧化便是發酵。 萎凋時3大不能
+
+      1. 不能消水過快
+
+        消水過於快速，葉片細胞來不及發酵便乾死，稱為「失水」，這種茶葉泡起來會沒什麼味道。
+
+      2. 不能攪拌太過用力
+
+        消水後，攪拌時太過用力，結果氧化作用讓茶葉變紅，使得葉片內部的細胞無法順利送出水分進行發酵作用，這種茶葉因「積水」或「飽水」，泡起來會有苦澀味。
+
+      3. 葉片不能有折傷或傷口
+
+        葉片一但折傷或剪斷葉片形成傷口，萎凋發酵無法達成完美狀態，沖泡出的茶湯口感亦隨之降低。
+
+  <b>「殺菁」</b>
+
+    欲停止發酵作用的持續，必須以高溫將茶葉炒熱或蒸熟，破壞發酵作用的酵素活性，這種動作稱為「殺菁」或「蒸菁」，而整個過程便是所謂的殺菁。
+
+  <b>「揉撚」</b>
+
+    殺菁後，為了使茶葉中成分容易藉由熱水沖泡而出，所以將茶葉放入揉撚機，讓茶葉隨著機器運轉而滾動，原先枝葉獨立的茶葉經揉撚後，逐漸捲曲緊縮。加上揉撚的壓力導致葉片內汁液滲出，附著於茶葉上，使得沖泡茶葉時茶液能很快溶解於熱水中，成為一杯滋味香醇的茶湯。
+
+  <b>「 乾燥」</b>
+
+    須經由乾燥機烘乾茶葉，利用高溫破壞殘留再揉撚茶葉中的酵素，讓茶葉本身的含水量低於5﹪。
+
+  <b>「精製」</b>
+
+    精製 步驟
+
+      1.篩分:依成形茶葉大小分類，將茶葉大小整齊化。
+
+      2.利用切斷機將太粗或太厚的茶葉切成希望大小，以便分類
+
+      3.隨之將茶梗等雜物挑除，以整形機加工處理
+
+      4.最後運用風吹原理，將製作過程中產生的茶屑剔除，成為品質優良且水準整齊的茶葉。
+
+  <b>「焙火」</b>
+
+    精製完成的茶葉，再經過熱度慢慢烘培的培火步驟，讓茶葉散發出清香的氣味。
+
+  <b>「包裝」</b>
+
+    茶葉經過各種工序以後，製茶工作到此可算大功告成。選定茶葉後，最終的步驟便是包裝。
+
+</pre>
+<!--台灣茶製茶過程-->
+<!--國維改的-->
 </div>
+
+
 
 
 <!--全部內容-->
