--- a/new/Note.html
+++ b/new/Note.html
@@ -166,7 +166,84 @@
 茶葉經過各種工序以後，製茶工作到此可算大功告成。選定茶葉後，最終的步驟便是包裝。
     </pre>
 </div>
-<!--挑茶-->
+
+<!--嘉君改der-->
+<!--茶具-->
+<div class="container">
+  <header class="major special">
+    <h2>§ 茶具小知識</h2>
+    </header>
+
+  <h4>茶壺</h4>
+    <pre>
+是泡茶的器皿。茶壺主要由壺蓋、壺身、壺底、手把或提把組成，
+常見材質有陶壺、紫砂壺、瓷壺、玻璃等。
+要功能在裝載茶葉與熱水，讓茶葉味道釋放於熱水中，是泡茶重要的工具之一。
+   </pre>
+
+   <h4>茶海</h4>
+    <pre>
+又稱為公道杯、茶盅，是為了均勻茶湯濃度而設計的器皿，亦可沉澱茶渣。
+   </pre>
+
+  <h4>茶盤</h4>
+   <pre>
+用來盛放茶杯或其他茶具的盤子，形狀大小多樣，常見竹、木製品，也有用陶瓷製作而成的。
+   </pre>
+
+  <h4>茶船</h4>
+   <pre>
+又稱茶池，壺置於其中可保溫，也可承接泡茶時溢出的茶水。
+   </pre>
+
+  <h4>茶杯</h4>
+   <pre>
+茶杯是用來盛茶、飲用的工具，但也有細分為品茗杯、聞香杯。
+茶壺或茶盅泡好的茶，倒進茶杯，讓人品嚐茶水。
+茶杯型式多、變化也多，有蓋無蓋、有手柄無柄等。
+飲茶專用茶杯材質以陶、瓷、玻璃最為常見。
+   </pre>
+
+  <h4>茶則</h4>
+   <pre>
+茶則，功用為取茶入壺，主要是竹製。
+用手取茶，容易有衛生及溼氣問題，用茶匙取用不方便，兩者皆會使茶葉品質下降。
+為此，愛喝茶的人就發明了茶則，是非常方便又有茶趣的喝茶小工具。
+   </pre>
+
+  <h4>茶匙</h4>
+   <pre>
+泡茶匙和一般湯匙相同，是專用於泡茶的小功具。
+茶匙的功能很多，諸如置茶、提茶水、聞香都可以用的到。
+主要以瓷質製作，是泡茶時不可缺少的小工具。
+   </pre>
+
+  <h4>茶針</h4>
+   <pre>
+茶針造型為針狀，它的用途是清理茶壺出水口，將堵住的茶葉、茶梗挑出，讓茶湯倒起來順暢。
+另外還有一種茶針是拆解茶餅專用，例如開普洱茶餅，通常是金屬製。
+   </pre>
+
+  <h4>杯托</h4>
+   <pre>
+放茶杯、聞香杯的小托盤，有美觀作用，避免燙手。
+   </pre>
+
+  <h4>茶巾</h4>
+   <pre>
+作用為乾壺，將茶壺或茶海底部殘留的水拭乾，及擦拭桌面的水滴。
+   </pre>
+
+  <h4>水方</h4>
+   <pre>
+又稱茶洗，可盛裝棄置茶水、茶渣的器皿。
+   </pre>
+
+  <h4>茶倉</h4>
+   <pre>
+置茶的容器，用於儲存茶葉，有瓷器罐、陶罐、錫罐或其他材質，須具備密封性、防潮、防光照的功能。
+   </pre>
+</div>
 
 </section>
    <!-- Footer -->
